LSTM with 3 scenarios of input/outputs, predicted test data & basic hyperparam tuning.

--- a/LSTM/LSTM_rach.ipynb
+++ b/LSTM/LSTM_rach.ipynb
@@ -25,36 +25,10 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[name: \"/device:CPU:0\"\n",
-      "device_type: \"CPU\"\n",
-      "memory_limit: 268435456\n",
-      "locality {\n",
-      "}\n",
-      "incarnation: 13071215353283229591\n",
-      "xla_global_id: -1\n",
-      ", name: \"/device:GPU:0\"\n",
-      "device_type: \"GPU\"\n",
-      "memory_limit: 1751030171\n",
-      "locality {\n",
-      "  bus_id: 1\n",
-      "  links {\n",
-      "  }\n",
-      "}\n",
-      "incarnation: 13128132558555836093\n",
-      "physical_device_desc: \"device: 0, name: NVIDIA GeForce RTX 3050 Laptop GPU, pci bus id: 0000:01:00.0, compute capability: 8.6\"\n",
-      "xla_global_id: 416903419\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from tensorflow.python.client import device_lib\n",
-    "print(device_lib.list_local_devices())"
+    "# from tensorflow.python.client import device_lib\n",
+    "# print(device_lib.list_local_devices())"
    ]
   },
   {
@@ -169,7 +143,7 @@
    "source": [
     "stock = 'aapl' # Apple\n",
     "\n",
-    "df = pd.read_csv('Stocks/%s.us.txt' % stock, index_col=0)\n",
+    "df = pd.read_csv('../Data/Stocks/%s.us.txt' % stock, index_col=0)\n",
     "df.drop('OpenInt', inplace=True, axis=1) # OpenInt column seems to be useless\n",
     "print(df.shape)\n",
     "df.head()"
