--- a/KNN/KNN_xj.ipynb
+++ b/KNN/KNN_xj.ipynb
@@ -2,15 +2,157 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import csv\n",
+    "import random\n",
+    "import math\n",
+    "import operator\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8364, 5)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1984-09-07</th>\n",
+       "      <td>0.42388</td>\n",
+       "      <td>0.42902</td>\n",
+       "      <td>0.41874</td>\n",
+       "      <td>0.42388</td>\n",
+       "      <td>23220030</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984-09-10</th>\n",
+       "      <td>0.42388</td>\n",
+       "      <td>0.42516</td>\n",
+       "      <td>0.41366</td>\n",
+       "      <td>0.42134</td>\n",
+       "      <td>18022532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984-09-11</th>\n",
+       "      <td>0.42516</td>\n",
+       "      <td>0.43668</td>\n",
+       "      <td>0.42516</td>\n",
+       "      <td>0.42902</td>\n",
+       "      <td>42498199</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984-09-12</th>\n",
+       "      <td>0.42902</td>\n",
+       "      <td>0.43157</td>\n",
+       "      <td>0.41618</td>\n",
+       "      <td>0.41618</td>\n",
+       "      <td>37125801</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1984-09-13</th>\n",
+       "      <td>0.43927</td>\n",
+       "      <td>0.44052</td>\n",
+       "      <td>0.43927</td>\n",
+       "      <td>0.43927</td>\n",
+       "      <td>57822062</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Open     High      Low    Close    Volume\n",
+       "Date                                                    \n",
+       "1984-09-07  0.42388  0.42902  0.41874  0.42388  23220030\n",
+       "1984-09-10  0.42388  0.42516  0.41366  0.42134  18022532\n",
+       "1984-09-11  0.42516  0.43668  0.42516  0.42902  42498199\n",
+       "1984-09-12  0.42902  0.43157  0.41618  0.41618  37125801\n",
+       "1984-09-13  0.43927  0.44052  0.43927  0.43927  57822062"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stock = 'aapl'\n",
+    "\n",
+    "df = pd.read_csv('%s.us.txt' % stock, index_col=0)\n",
+    "df.drop('OpenInt', inplace=True, axis=1) # OpenInt column seems to be useless\n",
+    "print(df.shape)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "2c0e9da8e1a1738d9d26e6af9cd6b72fce9f0039be4af6be2c6d221403c68148"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.11 64-bit ('.venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.11"
   },
   "orig_nbformat": 4
  },
