--- a/KNN/KNN_xj.ipynb
+++ b/KNN/KNN_xj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "1984-09-13  0.43927  0.44052  0.43927  0.43927  57822062"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x130b92910>"
+       "<matplotlib.legend.Legend at 0x130550b90>"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 191,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "1984-09-20  0.43286  18453585    0.882502        0.000000"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -509,8 +509,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### K Nearest Neighbour (KNN) - Evaluation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -532,8 +539,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Above shows an accuracy score (>0.95) for our KNN model. Below is a gragh to help us visualise the data better."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -564,8 +578,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using our model, we can forecast and predict future stocks pricing. We will visualize the plot with our existing historical data."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -604,13 +625,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As we can see the blue color showcased the forecast on the stocks price. The forecast predicted that there would be a downturn. Therefore, we should not buy this stock for now!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Predict 'Up' 'Down' (5 days later) based on price change rate of the past 30 days.\n",
     "Another practical setting is to predict the return in a time period. Return of one month is defined as the price change rate, that is *price_of_month_end* - *price_of_month_start* / *price_of_month_start*. Then your problem is formulated as that (for example) given the past 3 years data (could be monthly return, then you have 36 time observations), the model is to predict next month’s return."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -810,7 +838,7 @@
        "1984-09-20  7.987819e+06  0.0  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 197,
      "metadata": {},
      "output_type": "execute_result"
     }
