--- a/KNN/KNN_xj.ipynb
+++ b/KNN/KNN_xj.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 220,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,9 @@
     "import pandas_datareader.data as web\n",
     "import matplotlib as mpl\n",
     "import matplotlib.pyplot as plt\n",
-    "import sklearn.preprocessing as preprocessing\n",
     "\n",
     "from matplotlib import style\n",
+    "from sklearn import preprocessing\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.neighbors import KNeighborsRegressor\n",
     "from sklearn.linear_model import Ridge\n",
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
        "1984-09-13  0.43927  0.44052  0.43927  0.43927  57822062"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 221,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [
     {
@@ -190,16 +190,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x130550b90>"
+       "<matplotlib.legend.Legend at 0x13114c7d0>"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 223,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "<AxesSubplot:xlabel='Date'>"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "1984-09-20  0.43286  18453585    0.882502        0.000000"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 225,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,8 +454,8 @@
     "\n",
     "We will clean up and process the data using the following steps before putting them into the prediction models:\n",
     "1. Drop missing value\n",
-    "2. Separating the label here, we want to predict the AdjClose\n",
-    "3. Scale the X so that everyone can have the same distribution for linear regression\n",
+    "2. Separating the label here, we want to predict the Close\n",
+    "3. Scale the X so that everyone can have the same distribution\n",
     "4. Finally We want to find Data Series of late X and early X (train) for model generation and evaluation\n",
     "5. Separate label and identify it as y\n",
     "6. Separation of training and testing of model by train test split"
@@ -463,18 +463,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 226,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/xingjian/Desktop/NUS/2122Sem1/CS3244/CS3244Project/KNN/.venv/lib/python3.7/site-packages/sklearn/preprocessing/_data.py:236: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
-      "  \"Numerical issues were encountered \"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Drop missing value\n",
     "dfreg.fillna(value=-99999, inplace=True)\n",
@@ -488,7 +479,9 @@
     "X = np.array(dfreg.drop(['Label'], axis=1))\n",
     "\n",
     "# Scale the X so that everyone can have the same distribution for linear regression\n",
-    "X = preprocessing.scale(X)\n",
+    "scaler = preprocessing.StandardScaler()\n",
+    "X = scaler.fit_transform(X)\n",
+    "#X = preprocessing.scale(X)\n",
     "\n",
     "# Finally We want to find Data Series of late X and early X (train) for model generation and evaluation\n",
     "X_lately = X[-forecast_out:]\n",
@@ -499,13 +492,7 @@
     "y = y[:-forecast_out]\n",
     "\n",
     "# Separation of training and testing of model by train test split.\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)\n",
-    "\n",
-    "train_data_len = math.ceil( len(X) * 0.8 ) # length of training data\n",
-    "#X_train = X[:train_data_len]\n",
-    "#y_train = y[:train_data_len]\n",
-    "#X_test = X[train_data_len:]\n",
-    "#y_test = y[train_data_len:]\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
   },
   {
@@ -517,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +825,7 @@
        "1984-09-20  7.987819e+06  0.0  "
       ]
      },
-     "execution_count": 197,
+     "execution_count": 230,
      "metadata": {},
      "output_type": "execute_result"
     }
