--- a/Stock Comparison/stock_compare.ipynb
+++ b/Stock Comparison/stock_compare.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Comparing Apple's stock with competitors' stocks\n",
     "\n",
-    "This segment will analyse on how our model's company (Apple) performs in relative with its competitors, and whether we can use similar approaches to predict those stocks."
+    "This segment will analyse on how Apple performs in relative with its competitors, and whether we can use similar approaches to predict those stocks."
    ]
   },
   {
