updated lstm  model

--- a/LSTM/gridsearchNotebook.ipynb
+++ b/LSTM/gridsearchNotebook.ipynb
@@ -217,29 +217,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data,val_data, test_data = data[0:int(len(data)*0.60)],data[int(len(data)*0.60):int(len(data)*0.80)],data[int(len(data)*0.80):len(data)]\n",
-    "data_val = pd.concat((train_data[\"Close\"], val_data[\"Close\"]), axis = 0,ignore_index = True)\n",
-    "training_set = train_data.iloc[:,4:5]\n",
-    "scaler = MinMaxScaler(feature_range = (0,1))\n",
-    "scaled_training_set = scaler.fit_transform(training_set)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_train(timestamp):\n",
+    "raw_data = data['Close']\n",
+    "diff_data = data['Close'].diff()\n",
+    "raw_data = raw_data.values.reshape(-1,1)\n",
+    "\n",
+    "\n",
+    "train_data,val_data, test_data = diff_data[0:int(len(data)*0.60)],diff_data[int(len(data)*0.60):int(len(data)*0.80)],diff_data[int(len(data)*0.80):len(data)]\n",
+    "raw_test = raw_data[int(len(data)*0.80)-1:len(data)]\n",
+    "\n",
+    "training_set = train_data.values.reshape(-1,1)\n",
+    "val_set = val_data.values.reshape(-1,1)\n",
+    "\n",
+    "scaler = MinMaxScaler(feature_range = (0,1))\n",
+    "scalar = scaler.fit(training_set)\n",
+    "scaled_training_set = scaler.transform(training_set)\n",
+    "scaled_val_set = scaler.transform(val_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_train(timestep):\n",
     "    x_train = []\n",
     "    y_train = []\n",
-    "    \n",
-    "    for i in range(timestamp,len(training_set)):\n",
-    "        x_train.append(scaled_training_set[i-timestamp:i,0])\n",
+    "\n",
+    "    for i in range(timestep+1,len(training_set)):\n",
+    "        x_train.append(scaled_training_set[i-timestep:i,0])\n",
     "        y_train.append(scaled_training_set[i,0])\n",
     "    \n",
     "    x_train = np.array(x_train)\n",
@@ -250,20 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_val(timestamp):\n",
+    "def prepare_val(timestep):\n",
     "    x_val = []\n",
     "    y_val = []\n",
-    "\n",
-    "    inputs = data_val[(len(train_data) - len(val_data) - timestamp):].values\n",
-    "    inputs = inputs.reshape(-1,1)\n",
-    "    inputs = scaler.fit_transform(inputs)\n",
-    "    for i in range(timestamp,len(val_data) + timestamp):\n",
-    "        x_val.append(inputs[i-timestamp:i,0])\n",
-    "        y_val.append(inputs[i,0])\n",
+    "    for i in range(timestep,len(val_set)):\n",
+    "        x_val.append(scaled_val_set[i-timestep:i,0])\n",
+    "        y_val.append(scaled_val_set[i,0])\n",
     "    \n",
     "    x_val = np.array(x_val)\n",
     "    y_val = np.array(y_val)\n",
@@ -273,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,15 +289,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_fit(config):\n",
     "    # unpack config\n",
-    "    timestamp, n_nodes = config\n",
-    "    x_train, y_train = prepare_train(timestamp)\n",
-    "    x_val, y_val = prepare_val(timestamp)\n",
+    "    timestep, n_nodes = config\n",
+    "    x_train, y_train = prepare_train(timestep)\n",
+    "    x_val, y_val = prepare_val(timestep)\n",
     "    \n",
     "    model = keras.models.Sequential()\n",
     "    model.add(keras.layers.LSTM(units = n_nodes, return_sequences = True, input_shape = (x_train.shape[1],1)))\n",
@@ -306,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,17 +352,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def model_configs():\n",
     "    # define scope of configs\n",
-    "    timestamp = [30,35,40,45,50,55,60]\n",
+    "    timestep = [30,35,40,45,50,55,60]\n",
     "    n_nodes = [20,25,30,35,40,45]\n",
     "    # create configs\n",
     "    configs = list()\n",
-    "    for i in timestamp:\n",
+    "    for i in timestep:\n",
     "        for j in n_nodes:\n",
     "            cfg = [i, j]\n",
     "            configs.append(cfg)\n",
@@ -366,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -374,48 +380,48 @@
      "output_type": "stream",
      "text": [
       "Total configs: 42\n",
-      "> Model[[30, 20]] 0.000026779\n",
-      "> Model[[30, 25]] 0.000032233\n",
-      "> Model[[30, 30]] 0.000024107\n",
-      "> Model[[30, 35]] 0.000027765\n",
-      "> Model[[30, 40]] 0.000027508\n",
-      "> Model[[30, 45]] 0.000027740\n",
-      "> Model[[35, 20]] 0.000032876\n",
-      "> Model[[35, 25]] 0.000041421\n",
-      "> Model[[35, 30]] 0.000037502\n",
-      "> Model[[35, 35]] 0.000039943\n",
-      "> Model[[35, 40]] 0.000031110\n",
-      "> Model[[35, 45]] 0.000033881\n",
-      "> Model[[40, 20]] 0.000033218\n",
-      "> Model[[40, 25]] 0.000050755\n",
-      "> Model[[40, 30]] 0.000026236\n",
-      "> Model[[40, 35]] 0.000034682\n",
-      "> Model[[40, 40]] 0.000039674\n",
-      "> Model[[40, 45]] 0.000019083\n",
-      "> Model[[45, 20]] 0.000042699\n",
-      "> Model[[45, 25]] 0.000041433\n",
-      "> Model[[45, 30]] 0.000030388\n",
-      "> Model[[45, 35]] 0.000033680\n",
-      "> Model[[45, 40]] 0.000031344\n",
-      "> Model[[45, 45]] 0.000023069\n",
-      "> Model[[50, 20]] 0.000040140\n",
-      "> Model[[50, 25]] 0.000041754\n",
-      "> Model[[50, 30]] 0.000034641\n",
-      "> Model[[50, 35]] 0.000042763\n",
-      "> Model[[50, 40]] 0.000031785\n",
-      "> Model[[50, 45]] 0.000035890\n",
-      "> Model[[55, 20]] 0.000038099\n",
-      "> Model[[55, 25]] 0.000030440\n",
-      "> Model[[55, 30]] 0.000040589\n",
-      "> Model[[55, 35]] 0.000040822\n",
-      "> Model[[55, 40]] 0.000025712\n",
-      "> Model[[55, 45]] 0.000018594\n",
-      "> Model[[60, 20]] 0.000045168\n",
-      "> Model[[60, 25]] 0.000045523\n",
-      "> Model[[60, 30]] 0.000038156\n",
-      "> Model[[60, 35]] 0.000031727\n",
-      "> Model[[60, 40]] 0.000034942\n",
-      "> Model[[60, 45]] 0.000034215\n"
+      "> Model[[30, 20]] 0.033783221\n",
+      "> Model[[30, 25]] 0.033915004\n",
+      "> Model[[30, 30]] 0.033942702\n",
+      "> Model[[30, 35]] 0.034053292\n",
+      "> Model[[30, 40]] 0.034091226\n",
+      "> Model[[30, 45]] 0.034064770\n",
+      "> Model[[35, 20]] 0.033987318\n",
+      "> Model[[35, 25]] 0.033959962\n",
+      "> Model[[35, 30]] 0.034036282\n",
+      "> Model[[35, 35]] 0.034094409\n",
+      "> Model[[35, 40]] 0.034176888\n",
+      "> Model[[35, 45]] 0.034173197\n",
+      "> Model[[40, 20]] 0.033969628\n",
+      "> Model[[40, 25]] 0.034078548\n",
+      "> Model[[40, 30]] 0.034147567\n",
+      "> Model[[40, 35]] 0.034317990\n",
+      "> Model[[40, 40]] 0.034291252\n",
+      "> Model[[40, 45]] 0.034310182\n",
+      "> Model[[45, 20]] 0.034099816\n",
+      "> Model[[45, 25]] 0.034271905\n",
+      "> Model[[45, 30]] 0.034289877\n",
+      "> Model[[45, 35]] 0.034294938\n",
+      "> Model[[45, 40]] 0.034368554\n",
+      "> Model[[45, 45]] 0.034424908\n",
+      "> Model[[50, 20]] 0.034210833\n",
+      "> Model[[50, 25]] 0.034273899\n",
+      "> Model[[50, 30]] 0.034368247\n",
+      "> Model[[50, 35]] 0.034412097\n",
+      "> Model[[50, 40]] 0.034471647\n",
+      "> Model[[50, 45]] 0.034488676\n",
+      "> Model[[55, 20]] 0.034223896\n",
+      "> Model[[55, 25]] 0.034367745\n",
+      "> Model[[55, 30]] 0.034460724\n",
+      "> Model[[55, 35]] 0.034399272\n",
+      "> Model[[55, 40]] 0.034566428\n",
+      "> Model[[55, 45]] 0.034589914\n",
+      "> Model[[60, 20]] 0.034364055\n",
+      "> Model[[60, 25]] 0.034541874\n",
+      "> Model[[60, 30]] 0.034599595\n",
+      "> Model[[60, 35]] 0.034574867\n",
+      "> Model[[60, 40]] 0.034597501\n",
+      "> Model[[60, 45]] 0.034721415\n"
      ]
     }
    ],
