main notebook for LSTM model. Comments & headers added

--- a/Final/LSTM.ipynb
+++ b/Final/LSTM.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "source": [
     "# LSTM\n",
-    "**This is the main notebook for the LSTM model.** A secondary notebook *LSTM_tuning.ipynb* has been created for tuning the hyperparameters as the process takes very long. This notebook shows the different variants of LSTM models we trained for three time offsets: ```t+1```, ```t+5``` and ```t+30```, as well as another three variants trained for three stocks representing three trends of stock prices.\n",
+    "**This is the main notebook for the LSTM model.** A secondary notebook *LSTM_tuning.ipynb* has been created for tuning the hyperparameters as the process takes very long. \n",
+    "\n",
+    "This notebook shows the different variants of LSTM models we trained for three time offsets: ```t+1```, ```t+5``` and ```t+30```, as well as another three variants trained for three stocks representing three trends of stock prices.\n",
     "\n",
     "The sections are as follows:\n",
     "1. [Importing Data](#1.-Importing-Data): Data import and visualization\n",
@@ -721,7 +723,7 @@
    "source": [
     "rmse_wk, pred_wk = evaluate_lstm(data_wk, lstm_wk, scaler_wk, \n",
     "                                 hist=hist_wk, title='Predicted Close Value for Next Week',\n",
-    "                                 actual_data=df, timestep=step, offset=5, save_fig='wk_norm');"
+    "                                 actual_data=df, timestep=step, offset=5);"
    ]
   },
   {
@@ -799,7 +801,7 @@
    "source": [
     "rmse_mm, pred_mm = evaluate_lstm(data_mm, lstm_mm, scaler_mm,\n",
     "                                 hist=hist_mm, title='Predicted Close Value for Next Month',\n",
-    "                                 actual_data=df, timestep=step, offset=30, save_fig='mm_norm');"
+    "                                 actual_data=df, timestep=step, offset=30);"
    ]
   },
   {
@@ -2307,11 +2309,11 @@
    ],
    "source": [
     "print('INCREASING')\n",
-    "diff30 = evaluate_diff_stocks(diff30, ['aapl'], offset=30) # save_fig='aapl'\n",
+    "diff30 = evaluate_diff_stocks(diff30, ['aapl'], offset=30)\n",
     "print('UP & DOWN')\n",
-    "diff30 = evaluate_diff_stocks(diff30, ['mik'], offset=30) # save_fig='mik'\n",
+    "diff30 = evaluate_diff_stocks(diff30, ['mik'], offset=30)\n",
     "print('DOWN')\n",
-    "diff30 = evaluate_diff_stocks(diff30, ['ypf'], offset=30) # save_fig='ypf'"
+    "diff30 = evaluate_diff_stocks(diff30, ['ypf'], offset=30)"
    ]
   },
   {
