--- a/Final/LSTM_tuning.ipynb
+++ b/Final/LSTM_tuning.ipynb
@@ -7,9 +7,9 @@
     "# LSTM (tuning)\n",
     "**This is the secondary notebook for the LSTM model.** Please refer to *LSTM.ipynb* for the main notebook.\n",
     "\n",
-    "In this notebook, we perform a grid search for the permutation of hyperparameters that will give the lowest ```val_loss```. This took extremely long as we not only tested many permutations, but also trained 10 different models per configuration to find the average loss. This was necessary as the building and fitting LSTM models give volatile results.\n",
+    "In this notebook, we perform a grid search for the permutation of hyperparameters that will give the lowest ```val_loss```. This took extremely long as we not only tested many permutations, but also trained 10 different models per configuration to find the average loss. This was necessary as the building and fitting of LSTM models give volatile results.\n",
     "\n",
-    "**We created a separate notebook as the process took about 6.5 hours to run.**\n",
+    "**We created a separate notebook as the process took about 7 hours to run.**\n",
     "\n",
     "The sections are as follows:\n",
     "1. [Data Importing and Normalization](#1.-Data-Importing-and-Normalization)\n",
